# LearningByLanguage

./: .gitignore  README.md
DNN/: fit_hourse_price.py
OperationsResearch/: README.md  book.py  experiment.py  requirements.txt  tutorial1.py  tutorial2.py
OperationsResearch/NonLinear/: exp1.py
OperationsResearch/book/: Assignment.py  Assignment2.py  exp1.py  exp2.ipynb  game.py  tansport.py
OperationsResearch/experiment/: exp1.py
OperationsResearch/heuristic/: README.md  de.py  exp1.py  grea.py  sample.py
OperationsResearch/pyomo_tutorial/: exp1.py  exp2.py  exp3.py  exp31.py  exp4.py  exp41.py  (+4 more)
c/: .gitignore  helloworld.c  helloworld.cpp  thread.c
c/example/hiredis/: CMakeLists.txt  exp.cpp
c/example/hiredis/cmake/: Findhiredis.cmake
c/tutorial/: CMakeLists.txt  CmakeConfig.h  CmakeConfig.h.in  ComplexType.cpp  README.md  enum.cpp  limits.cpp  methodparames.cpp  ofstream.cpp  pointer.cpp  run.cpp  textin.cpp  typecast.cpp
c/tutorial/ADT/: CMakeLists.txt  Queue.cpp  Queue.hpp  makefile  run.cpp  stack.cpp  stack.hpp  stringbad.cpp  stringbad.hpp  vector.cpp  vector.hpp
c/tutorial/RTTI/: Makefile  ctring.cpp  run.cpp
c/tutorial/cmake_tut/: CMakeLists.txt  run.cpp
c/tutorial/cmake_tut/static_lib/: CMakeLists.txt  hello.cpp
c/tutorial/cmake_tut/static_lib/include/: hello.hpp
c/tutorial/derived/: Makefile  README.md  Students.cpp  Students.hpp  WebtownClub.cpp  WebtownClub.hpp  Worker.cpp  Worker.hpp  run.cpp
c/tutorial/friend/: Makefile  Television.cpp  Television.hpp  run.cpp
c/tutorial/generic/: Makefile  README.md  algo.cpp  algo.hpp  iter.cpp  iter.hpp  oper.cpp  oper.hpp  run.cpp
c/tutorial/literal/: CMakeLists.txt  run.cpp
c/tutorial/reference/: CMakeLists.txt  README.md  example.cpp  move_semantics.cpp  rightvalref.cpp  run.cpp  twoswap.cpp
c/tutorial/reference/include/: example.hpp  move_semantics.hpp  rightvalref.hpp  twoswap.hpp
c/tutorial/smart_point/: CMakeLists.txt  Makefile  funcpoint.cpp  lambda.cpp  report.hpp  run.cpp  smart_ptr.cpp  smart_ptr.hpp
c/tutorial/space/: CMakeLists.txt  newplace.cpp  run.cpp  usenew.cpp
c/tutorial/space/include/: JustTesing.hpp  newplace.hpp  usenew.hpp
c/tutorial/template/: Makefile  README.md  friend1.cpp  friend2.cpp  friend3.cpp  run.cpp  stack.cpp  stack.hpp  tempparm.cpp
c/tutorial/wrapper/: CMakeLists.txt  func.cpp  func.hpp
groovy/: HelloWorld.groovy  baby.groovy  baby.txt  builder.groovy  closures.groovy  dataAccess.groovy  iterator.groovy
haskell/: helloworld.hs  pattern.hs
hbase/: Hbase.java
java/: AddTwoNumer.java  TwoSum.java
javascript/: Levenshtein.js  README.md  destructuring.js  index.html  let_and_const.js  test_async.js  test_call.js  test_class.js  test_container.js  test_generator.js  test_object.js
nodejs/: compress.js  decompress.js  example.js  excel.js  http_request.js  input.txt
php/: README.md  Readme.md  array.php  sample1.php  sample2.php  sample3.php  sample4.php  sample5_ioc.php  sample6.php  sample7.php  sample8.php  sample9.php
python/: BaseElasticsearch.py  LookingGlass.py  MultipleInheritance.py  README.md  TSP.py  TSP_Annealing.py  bloomfilter.py  classifier.py  closure.py  compare_thread_asyncio.py  coroutine.py  coroutine_gevent.py  counter.py  decisionTress.py  decorator.py  default_dict.py  entry_audit.py  excel2003.py  falconServer.py  format.py  freight_audit.py  global.py  heart.py  identification.py  image_trasfer.py  lambda.py  m_log.py  magic_method.py  module_datetime.py  mongo.py  multiprocess.py  myabc.py  myactor.py  myargparse.py  myarray.py  myasyncio.py  mybeautifulsoup.py  myconfigparse.py  mycrypto.py  mydatetime.py  (+33 more)
shell/: bashrc  install_docker.sh  sed.sh
vim/: vimrc
vision/: README.md  facemesh.py  mask.py
(+60 files in other folders)
